# clickhouse-readonly

./: Cargo.toml  LICENSE  README.md
examples/: query_stream.rs
src/: client.rs  error.rs  inner_stream.rs  lib.rs  protocol.rs  query.rs  stream.rs  transport.rs  util.rs
src/binary/: encoder.rs  micromarshal.rs  mod.rs  parser.rs  read_ex.rs  uvarint.rs
src/block/: block_info.rs  builder.rs  chunk_iterator.rs  mod.rs  row.rs
src/column/: array.rs  chunk.rs  column_data.rs  concat.rs  factory.rs  fixed_string.rs  list.rs  mod.rs  nullable.rs  numeric.rs  string.rs
src/column/iter/: mod.rs
src/pool/: mod.rs
src/pool/futures/: get_handle.rs
src/types/: command.rs  mod.rs  packet.rs  server_type.rs  sql_trait.rs  sql_type.rs  stat_buffer.rs
src/value/: mod.rs  value.rs  value_ref.rs
